--- a/index.html
+++ b/index.html
@@ -548,7 +548,16 @@
                     <h4>Community Partner</h4>
                     <img src="assets/img/other/mill-courtland.png" style="width: 200px" class="partner_img">
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="testimonial-item">
+                    <h3>Kitchener-Waterloo Multicultural Center </h3>
+                    <h4>Community Partner</h4>
+                    <img src="assets/img/other/KWMC+Horizontal+Logo.png" width='500px'>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-item">
@@ -584,7 +593,12 @@
                     <h4>Dedicated Donor</h4>
                     <img src="assets/img/other/compass_logo.png" id="compass">
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
+
+
+
+
+                <!-- End testimonial item -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -694,6 +708,14 @@
                     <a
                       href="https://www.cbc.ca/kidsnews/post/profile-ontario-teen-lessens-hybrid-learning-stress-with-free-1-on-1-tutori"><img
                         src="assets/img/other/CBC_Kids_New_logo.png" style="width: 200px"></a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="testimonial-item">
+                    <h3>51.ca</h3>
+                    <a href="https://info.51.ca/news/canada/2021-12/1052313.html"><img
+                        src="assets/img/other/51-app-logo.6e8df994.png" style="width: 200px"></a>
                   </div>
                 </div>
 
