--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>HomeworkHub</title>
+    <title>HomeworkHub - Code of Conduct</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -41,31 +41,31 @@
             <div class="logo">
                 <div class="together">
                     <a href="index.html"><img src="assets/img/logo.png" alt="logo" class="img-fluid"></a>
-                    <h1><a href="index.html"><span>HomeworkHub - Code of Conduct</span></a></h1>
+                    <h1 id="coc"><a href="index.html"><span>HomeworkHub - Code of Conduct</span></a></h1>
                 </div>
             </div>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="#hero">Home</a></li>
+                    <li><a href="index.html#hero">Home</a></li>
                     <!-- <li><a href="#function">Students</a></li> -->
-                    <li class="dropdown"><a href="#function"><span>Students</span> <i
+                    <li class="dropdown"><a href="index.html#function"><span>Students</span> <i
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a
                                     href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
                             </li>
                         </ul>
-                    <li><a href="#volunteers">Volunteers</a></li>
-                    <li><a href="#intro">Events</a></li>
+                    <li><a href="index.html#volunteers">Volunteers</a></li>
+                    <li><a href="index.html#intro">Events</a></li>
                     <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#team">Our Team</a></li>
-                            <li><a href="#donors">Our Partners</a></li>
-                            <li><a href="#news">Our Features</a></li>
+                            <li><a href="index.html#team">Our Team</a></li>
+                            <li><a href="index.html#donors">Our Partners</a></li>
+                            <li><a href="index.html#news">Our Features</a></li>
                         </ul>
-                    <li><a href="#real-testimonials">Testimonials</a></li>
-                    <li><a href="#donations">Donate</a></li>
+                    <li><a href="index.html#real-testimonials">Testimonials</a></li>
+                    <li><a href="index.html#donations">Donate</a></li>
 
                     <!-- <li><div id="google_translate_element"></div></li -->
                     <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
