--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -393,9 +393,9 @@
                         <h4>Useful Links:</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Courses</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Contact</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="index.html#pricing">Courses</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="index.html#pricing">Contact</a></li>
                             <!-- <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li> -->
                         </ul>
