--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -93,14 +93,14 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center align-items-center d-flex">
                 <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
-                    <div data-aos="zoom-out">
-                        <h1>Tutor <span>Code of Conduct</span></h1>
+                    <div data-aos="zoom-out" class="text-center">
+                        <h1><span>Code of Conduct</span></h1>
                     </div>
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2 hero-img mt-3" data-aos="zoom-out" data-aos-delay="300">
-                    <img src="https://images.unsplash.com/photo-1584697964156-deca98e4439d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
+                    <img src="https://cdn-icons-png.flaticon.com/512/4310/4310042.png"
                         class="img-fluid animated rounded" alt="">
                 </div>
             </div>
@@ -393,10 +393,13 @@
                         <h4>Useful Links:</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About Us</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="index.html#pricing">Courses</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="index.html#pricing">Contact</a></li>
-                            <!-- <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="code-of-conduct.html">Student & Tutor Code
+                                    of Conduct</a>
+
+                                <!-- <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li> -->
                         </ul>
                     </div>
