--- a/index.html
+++ b/index.html
@@ -1175,9 +1175,11 @@
             <h4>Useful Links:</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About Us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Courses</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Contact</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="code-of-conduct.html">Student & Tutor Code of Conduct</a>
+              </li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li> -->
             </ul>
