--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -261,13 +261,12 @@
         <!-- Subjects Section -->
         <section id="pricing" class="pricing">
             <div class="container">
-                <div class="section-title" data-aos="fade-up">
+                <div class="section-title" data-aos="fade-up" style="padding: 0;">
                     <p>Reporting Requirements
                     </p>
                 </div>
 
-                <div class="row" data-aos="fade-left" style="width:80%">
-
+                <div class="row" data-aos="fade-left" style="width:80%; ">
                     <strong>All parties must report suspected child sexual abuse, inappropriate behaviour or incidents
                         that they become aware of, whether the behaviour or incidents were personally witnessed or not.
                     </strong>
@@ -281,19 +280,22 @@
                     </ol>
                 </div>
 
-                <div class="section-title" style="margin-bottom: 0;" data-aos="fade-up">
-                    <p style="font-size:20px">Follow up on Reporting
-                    </p>
+                <div class="mt-5">
+                    <div class="section-title" style="margin-bottom: 0;" data-aos="fade-up">
+                        <p style="font-size:20px">Follow up on Reporting
+                        </p>
 
-                </div>
-                <div style=" margin-top: -30px;">
-                    <p>When an allegation or suspicion of potentially illegal behaviour is
-                        reported, police and/or a
-                        child
-                        welfare agency will be notified. HomeworkHub will follow up internally as needed.
-                        If inappropriate behaviour is confirmed, HomeworkHub will terminate the relationship with the
-                        alleged party immediately.
-                    </p>
+                    </div>
+                    <div style=" margin-top: -30px;">
+                        <p>When an allegation or suspicion of potentially illegal behaviour is
+                            reported, police and/or a
+                            child
+                            welfare agency will be notified. HomeworkHub will follow up internally as needed.
+                            If inappropriate behaviour is confirmed, HomeworkHub will terminate the relationship with
+                            the
+                            alleged party immediately.
+                        </p>
+                    </div>
                 </div>
 
         </section> <!-- End Subject Section -->
