--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
             </ul>
-          <li><a href="#volunteers">Volunteers</a></li>
+          </li>
+          <li class="dropdown"><a href="#volunteers"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+            </ul>
+          </li>
           <li><a href="#intro">Events</a></li>
           <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -424,19 +431,35 @@
     <section id="testimonials" class="testimonials">
       <div class="container">
 
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <h1 id="intro">Intro Programs</h1>
-            <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a new
-              hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
-              Computer Science! During these introduction courses, you'll be given the opportunity to discover your
-              chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
-            </p>
-            <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
+        <div class="testimonials-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <h1 id="intro">Intro Programs</h1>
+                <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a
+                  new
+                  hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
+                  Computer Science! During these introduction courses, you'll be given the opportunity to discover your
+                  chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
+                </p>
+                <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <h1 id="intro">Fundraiser</h1>
+                <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a
+                  new
+                  hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
+                  Computer Science! During these introduction courses, you'll be given the opportunity to discover your
+                  chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
+                </p>
+                <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
+              </div>
+            </div>
           </div>
-        </div>
 
-      </div>
+        </div>
     </section>
     <!-- End of Intro Program Section -->
 
@@ -1164,6 +1187,7 @@
               <p class="pb-3"><em>Let's learn and teach together!</em></p>
               <p>
                 Ontario, Canada
+                <br>
                 <strong>Phone:</strong> +1 917 660 3871<br>
                 <strong>Email:</strong> <a
                   href="mailto:tutoring.homeworkhub@gmail.com">tutoring.homeworkhub@gmail.com</a><br>
