--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </li>
             </ul>
           </li>
-          <li><a href="#intro">Events</a></li>
+          <li><a href="#events">Events</a></li>
           <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#team">Our Team</a></li>
@@ -427,11 +427,13 @@
         </div>
     </section> <!-- End Subject Section -->
 
-    <!--   Intro Program Section -->
-    <section id="testimonials" class="testimonials">
+    <!--   Events Section -->
+    <section id="events" class="testimonials events">
       <div class="container">
-
-        <div class="testimonials-slider swiper">
+        <div class="section-title" data-aos="fade-up">
+          <p>Events</p>
+        </div>
+        <div class="events-slider swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -447,18 +449,20 @@
             </div>
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <h1 id="intro">Fundraiser</h1>
+                <h1 id="">Holiday Fundraiser</h1>
                 <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a
                   new
                   hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
                   Computer Science! During these introduction courses, you'll be given the opportunity to discover your
                   chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
                 </p>
-                <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
+                <h3 id="hl"><a href="">Donate Now!</a></h3>
               </div>
             </div>
           </div>
-
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev" style="color: white"></div>
+          <div class="swiper-button-next swiper-button-white" style="color: white"></div>
         </div>
     </section>
     <!-- End of Intro Program Section -->
