--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li><a href="#real-testimonials">Testimonials</a></li>
           <li><a href="#donations">Donate</a></li>
 
-          <!-- <li><div id="google_translate_element"></div></li -->
+          <!-- <li><div id="goofgle_translate_element"></div></li -->
           <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="index.html">French</a></li>
@@ -1185,7 +1185,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-6 col-md-6 me-5">
             <div class="footer-info rounded-pill">
               <h3>HomeworkHub</h3>
               <p class="pb-3"><em>Let's learn and teach together!</em></p>
@@ -1228,7 +1228,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <div class="col footer-newsletter">
             <h4>Social Networks:</h4>
             <ul>
               <li><i class="bx bxl-instagram"></i> <a href="https://www.instagram.com/hh.tutoring/">Instagram</a></li>
