--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
                   <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" width='272' alt="">
                   </div>
                   <div class="member-info">
-                    <h4>Tina Faez</h4>
+                    <h4>Tahmina Faez</h4>
                     <span>Volunteers and Tutors Director</span>
                     <!--  <div class="social">
                               <a href=""><i class="bi bi-instagram"></i></a>
