--- a/index.html
+++ b/index.html
@@ -436,29 +436,53 @@
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="testimonial-item">
-                <h1 id="intro">Intro Programs</h1>
-                <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a
-                  new
-                  hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
-                  Computer Science! During these introduction courses, you'll be given the opportunity to discover your
-                  chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
-                </p>
-                <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3" src="assets/img/gallery/backpacksdonation.jpg" width="300">
+                  <p id="intro" style="width: 500px;">For HomeworkHub Tutoring's "Back to School with Backpacks"
+                    fundraiser, we
+                    raised over
+                    250
+                    backpacks with school supplies so our community's students to can be school-ready for the Back to
+                    School season. We couldn't have done this without the support of our community partners over at
+                    <b><a href="https://www.risingyouth.ca/">Rising
+                        Youth</a></b> and all the help from our wonderful Students and Volunteers!
+                  </p>
+                </div>
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="testimonial-item">
-                <h1 id="">Holiday Fundraiser</h1>
-                <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a
-                  new
-                  hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
-                  Computer Science! During these introduction courses, you'll be given the opportunity to discover your
-                  chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
-                </p>
-                <h3 id="hl"><a href="">Donate Now!</a></h3>
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Ho Ho HomeworkHub</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3" src="assets/img/gallery/giftdrive.jpeg" width="200">
+                  <p id="intro" style="width: 600px;">Thanks to the help of our community partners and <b><a
+                        href="https://www.risingyouth.ca/">Rising
+                        Youth</a></b>,
+                    HomeworkHub was able to donate over $2000 worth of Holiday Gifts to students in our community this
+                    Holiday Season for our inaugural "Ho Ho HomeworkHub" Holiday Fundraiser!
+
+                  </p>
+                </div>
               </div>
             </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Let's Code Intro Session</h1>
+                <div class="d-flex justify-content-center align-items-center mt-2 flex-wrap gap-3">
+                  <img class="rounded-3" src="assets/img/gallery/LetsCodePic.png" width="400">
+                  <p id="intro" style="width: 600px;">HomeworkHub's "Let's Code" intro session was hosted in partnership
+                    with our friends over at <a href="http://compasstutoring.ca">Compass Tutoring</a>! Our tutors
+                    introduced students to the world of coding and
+                    computer science with the help of <a href="http://www.code.org">code.org</a>, JavaScript, and
+                    Python. If you're interested in coding,
+                    please visit Compass Tutoring for more information and stay tuned for future intro sessions!
+                  </p>
+                </div>
+              </div>
+            </div>
+
           </div>
           <div class="swiper-pagination"></div>
           <div class="swiper-button-prev" style="color: white"></div>
