--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -163,6 +163,9 @@
                                 <ul>
                                     <li>Treat all children with respect and dignity.
                                     </li>
+                                    <li>All volunteers above <b>18 years</b> of age must provide a valid vulnerable
+                                        sector police check
+                                    </li>
                                     <li>Establish, respect, and maintain appropriate boundaries with all children and
                                         their families involved in HomeworkHub activities or programs.
                                     </li>
@@ -320,10 +323,10 @@
                             </div>
 
                             <div class="email">
-                                <a href="mailto:tutoring.homeworkhub@gmail.com"><i class="bi bi-envelope"></i></a>
+                                <a href="mailto:info@homeworkhubtutoring.ca"><i class="bi bi-envelope"></i></a>
                                 <h4>Email:</h4>
-                                <a href="mailto:tutoring.homeworkhub@gmail.com">
-                                    <p>tutoring.homeworkhub@gmail.com</p>
+                                <a href="mailto:info@homeworkhubtutoring.ca">
+                                    <p>info@homeworkhubtutoring.ca</p>
                                 </a>
                             </div>
 
@@ -386,7 +389,7 @@
                                 Ontario, Canada
                                 <strong>Phone:</strong> +1 917 660 3871<br>
                                 <strong>Email:</strong> <a
-                                    href="mailto:tutoring.homeworkhub@gmail.com">tutoring.homeworkhub@gmail.com</a><br>
+                                    href="mailto:info@homeworkhubtutoring.ca">info@homeworkhubtutoring.ca</a><br>
                             </p>
                         </div>
                     </div>
