--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="651" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="709" data-purecounter-duration="1"
                     class="purecounter"></span>
-                  <p>Sessions Tutored</p>
+                  <p>Students</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="398" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="422" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -200,7 +200,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="2343" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="20418" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
@@ -1151,10 +1151,10 @@
                   </div>
 
                   <div class="email">
-                    <a href="mailto:tutoring.homeworkhub@gmail.com"><i class="bi bi-envelope"></i></a>
+                    <a href="mailto:info@homeworkhubtutoring.ca"><i class="bi bi-envelope"></i></a>
                     <h4>Email:</h4>
-                    <a href="mailto:tutoring.homeworkhub@gmail.com">
-                      <p>tutoring.homeworkhub@gmail.com</p>
+                    <a href="mailto:info@homeworkhubtutoring.ca">
+                      <p>info@homeworkhubtutoring.ca</p>
                     </a>
                   </div>
 
@@ -1217,8 +1217,7 @@
                 Ontario, Canada
                 <br>
                 <strong>Phone:</strong> +1 917 660 3871<br>
-                <strong>Email:</strong> <a
-                  href="mailto:tutoring.homeworkhub@gmail.com">tutoring.homeworkhub@gmail.com</a><br>
+                <strong>Email:</strong> <a href="mailto:info@homeworkhubtutoring.ca">info@homeworkhubtutoring.ca</a><br>
               </p>
             </div>
           </div>
