--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3" src="assets/img/gallery/giftdrive.jpeg" width="200">
+                  <img class="rounded-3" src="assets/img/gallery/grandriverhospitaldonation.jpg" width="350">
                   <p id="intro" style="width: 600px;">Thanks to the help of our community partners and <b><a
                         href="https://www.risingyouth.ca/">Rising
                         Youth</a></b>,
