--- a/index.html
+++ b/index.html
@@ -483,6 +483,19 @@
               </div>
             </div>
 
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro"> Message from Waterloo Mayor Dave!</h1>
+                <div class="d-flex justify-content-center align-items-center mt-2 flex-wrap gap-3">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/lIG2erG5AXA"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+
           </div>
           <div class="swiper-pagination"></div>
           <div class="swiper-button-prev" style="color: white"></div>
