adding compass event

--- a/index.html
+++ b/index.html
@@ -437,18 +437,13 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
-                <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
+                <h1 id="intro">Compass Codes</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3" src="assets/img/gallery/backpacksdonation.jpg" width="300">
-                  <p id="intro" style="width: 500px;">For HomeworkHub Tutoring's "Back to School with Backpacks"
-                    fundraiser, we
-                    raised over
-                    250
-                    backpacks with school supplies so our community's students to can be school-ready for the Back to
-                    School season. We couldn't have done this without the support of our community partners over at
-                    <b><a href="https://www.risingyouth.ca/">Rising
-                        Youth</a></b> and all the help from our wonderful Students and Volunteers!
+                  <img class="rounded-3" src="assets/img/compass_codes.png" width="350">
+                  <p id="intro" style="width: 600px;">
+                    Compass Tutoring, in partnership with HomeworkHub, is launching a new free program called Compass Codes! It’s a 2-month long program where students from grade 5 - 10 will meet weekly on Saturdays to learn more about web-development and how to develop user-friendly and dynamic web-applications. This 2-month web-development program will be taught by some of our best computer science tutors who are very eager and excited to work with our students! Everyone is welcomed, and no previous experience is necessary. The first class will be running on March 5th, 2022. Register now to secure a spot!
                   </p>
+                  <a href="https://forms.gle/GYsv44u8DzSpyJ4f9"><button class="lrn">Register Now</button></a>
                 </div>
               </div>
             </div>
@@ -463,6 +458,23 @@
                     HomeworkHub was able to donate over $2000 worth of Holiday Gifts to students in our community this
                     Holiday Season for our inaugural "Ho Ho HomeworkHub" Holiday Fundraiser!
 
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3" src="assets/img/gallery/backpacksdonation.jpg" width="300">
+                  <p id="intro" style="width: 500px;">For HomeworkHub Tutoring's "Back to School with Backpacks"
+                    fundraiser, we
+                    raised over
+                    250
+                    backpacks with school supplies so our community's students to can be school-ready for the Back to
+                    School season. We couldn't have done this without the support of our community partners over at
+                    <b><a href="https://www.risingyouth.ca/">Rising
+                        Youth</a></b> and all the help from our wonderful Students and Volunteers!
                   </p>
                 </div>
               </div>
