--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
               <h3>Grades</h3>
-              <img class="icons" src="https://image.flaticon.com/icons/png/128/167/167707.png">
+              <img class="icons" src="./assets/img/icons/students.png">
               <h5>We are tutoring</h5>
               <p>Grades 1 - 8</p>
 
@@ -317,7 +317,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" id="bckr">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
               <h3>Duration</h3>
-              <img class="icons" src="https://image.flaticon.com/icons/png/128/2972/2972531.png">
+              <img class="icons" src="./assets/img/icons/duration.png">
               <h5>Each session is</h5>
               <p>45 minutes</p>
 
@@ -327,7 +327,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="300">
               <h3>Sessions</h3>
-              <img class="icons" src="https://image.flaticon.com/icons/png/128/972/972260.png">
+              <img class="icons" src="./assets/img/icons/session.png">
               <h5>A subject is tutored for</h5>
               <p>8 sessions</p>
 
@@ -337,7 +337,7 @@
           <div class="col-lg-3 col-md-6 mt-4 pb-5 mt-lg-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="400">
               <h3>Subject Limit</h3>
-              <img class="icons" src="https://image.flaticon.com/icons/png/128/2702/2702069.png">
+              <img class="icons" src="./assets/img/icons/credit-limit.png">
               <h5>You can sign up for</h5>
               <p>3 subjects at a time</p>
 
@@ -369,7 +369,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" id="bckr">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
               <h2>Science</h2>
-              <img class="subjects" src="https://image.flaticon.com/icons/png/128/3035/3035512.png">
+              <img class="subjects" src="./assets/img/icons/science.png">
               <h6>Price: FREE</h6>
             </div>
           </div>
@@ -395,7 +395,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
               <h2>Mandarin</h2>
-              <img class="subjects" src="https://image.flaticon.com/icons/png/128/646/646585.png">
+              <img class="subjects" src="./assets/img/icons/calligraphy.png">
               <h6>Price: FREE</h6>
             </div>
           </div>
@@ -435,29 +435,13 @@
         </div>
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="testimonial-item d-flex flex-column align-items-center">
-                <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
-                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3" src="assets/img/gallery/backpacksdonation.jpg" width="300">
-                  <p id="intro" style="width: 500px;">For HomeworkHub Tutoring's "Back to School with Backpacks"
-                    fundraiser, we
-                    raised over
-                    250
-                    backpacks with school supplies so our community's students to can be school-ready for the Back to
-                    School season. We couldn't have done this without the support of our community partners over at
-                    <b><a href="https://www.risingyouth.ca/">Rising
-                        Youth</a></b> and all the help from our wonderful Students and Volunteers!
-                  </p>
-                </div>
-              </div>
-            </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3" src="assets/img/gallery/grandriverhospitaldonation.jpg" width="350">
-                  <p id="intro" style="width: 600px;">Thanks to the help of our community partners and <b><a
+                  <img class="rounded-3 img-fluid" src="assets/img/gallery/grandriverhospitaldonation.jpg">
+                  <p class="w-50" style="font-style: normal;">Thanks to the help of our community partners and <b><a
                         href="https://www.risingyouth.ca/">Rising
                         Youth</a></b>,
                     HomeworkHub was able to donate over $2000 worth of Holiday Gifts to students in our community this
@@ -469,10 +453,29 @@
             </div>
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="assets/img/gallery/backpacksdonation.jpg">
+                  <p class="w-50">For HomeworkHub Tutoring's "Back to School with Backpacks"
+                    fundraiser, we
+                    raised over
+                    250
+                    backpacks with school supplies so our community's students to can be school-ready for the Back to
+                    School season. We couldn't have done this without the support of our community partners over at
+                    <b><a href="https://www.risingyouth.ca/">Rising
+                        Youth</a></b> and all the help from our wonderful Students and Volunteers!
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Let's Code Intro Session</h1>
-                <div class="d-flex justify-content-center align-items-center mt-2 flex-wrap gap-3">
-                  <img class="rounded-3" src="assets/img/gallery/LetsCodePic.png" width="400">
-                  <p id="intro" style="width: 600px;">HomeworkHub's "Let's Code" intro session was hosted in partnership
+                <div class="d-flex w-75 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="assets/img/gallery/LetsCodePic.png">
+                  <p class="w-50 font-monospace ">HomeworkHub's "Let's Code" intro session was hosted in
+                    partnership
                     with our friends over at <a href="http://compasstutoring.ca">Compass Tutoring</a>! Our tutors
                     introduced students to the world of coding and
                     computer science with the help of <a href="http://www.code.org">code.org</a>, JavaScript, and
@@ -487,7 +490,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro"> Message from Waterloo Mayor Dave!</h1>
-                <div class="d-flex justify-content-center align-items-center mt-2 flex-wrap gap-3">
+                <div class="d-flex justify-content-center align-items-center mt-2 flex-wrap gap-3 w-50">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/lIG2erG5AXA"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
