--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="assets/img/gallery/grandriverhospitaldonation.jpg">
-                  <p class="w-50" style="font-style: normal;">Thanks to the help of our community partners and <b><a
+                  <p class="w-75 mt-2" style="font-style: normal;">Thanks to the help of our community partners and <b><a
                         href="https://www.risingyouth.ca/">Rising
                         Youth</a></b>,
                     HomeworkHub was able to donate over $2000 worth of Holiday Gifts to students in our community this
@@ -455,7 +455,7 @@
                 <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="assets/img/gallery/backpacksdonation.jpg">
-                  <p class="w-50">For HomeworkHub Tutoring's "Back to School with Backpacks"
+                  <p class="w-75 mt-2">For HomeworkHub Tutoring's "Back to School with Backpacks"
                     fundraiser, we
                     raised over
                     250
@@ -472,7 +472,7 @@
                 <h1 id="intro">Let's Code Intro Session</h1>
                 <div class="d-flex w-75 flex-wrap">
                   <img class="rounded-3 img-fluid" src="assets/img/gallery/LetsCodePic.png">
-                  <p class="w-50 font-monospace ">HomeworkHub's "Let's Code" intro session was hosted in
+                  <p class="w-75 mt-2 font-monospace ">HomeworkHub's "Let's Code" intro session was hosted in
                     partnership
                     with our friends over at <a href="http://compasstutoring.ca">Compass Tutoring</a>! Our tutors
                     introduced students to the world of coding and
